--- a/app/src/main/res/layout/activity_showing_map.xml
+++ b/app/src/main/res/layout/activity_showing_map.xml
@@ -1,8 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/container"
-    android:layout_width="3000dp"
-    android:layout_height="3000dp">
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <LinearLayout
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/tablelayout"
+        app:layout_constraintTop_toTopOf="parent">
 
 
-</LinearLayout>
+    </LinearLayout>
+
+    <TableLayout
+        android:id="@+id/tablelayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:stretchColumns="*"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <TableRow
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:background="@android:color/darker_gray">
+
+            <TextView android:text="A 구역" />
+
+            <TextView android:text="B 구역" />
+
+            <TextView android:text="C 구역" />
+
+            <TextView android:text="D 구역" />
+        </TableRow>
+
+        <TableRow
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:background="@android:color/holo_blue_dark">
+
+            <TextView android:text="0/25" />
+
+            <TextView android:text="0/25" />
+
+            <TextView android:text="0/25" />
+
+            <TextView android:text="0/25" />
+
+        </TableRow>
+
+    </TableLayout>
+
+</android.support.constraint.ConstraintLayout>
