--- a/app/src/main/res/layout/showing_map_item.xml
+++ b/app/src/main/res/layout/showing_map_item.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#00f0f0"
     >
 
     <LinearLayout
@@ -18,98 +17,124 @@
             android:layout_margin="40dp"
             android:columnCount="5"
             android:orientation="horizontal"
-            android:rowCount="5"
-            >
+            android:rowCount="5">
 
             <Button
-                android:layout_margin="2dp"
+                style="@style/CustomButtonView"
                 android:id="@+id/a00"
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:background="#97b4d7"
-                android:text="a00"
-                android:textSize="3dp" />
+                android:text="a00" />
 
             <Button
-                android:layout_margin="2dp"
+                style="@style/CustomButtonView"
                 android:id="@+id/a01"
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:background="#97b4d7"
-                android:text="a01"
-                android:textSize="3dp" />
+                android:text="a01" />
 
             <Button
-                android:layout_margin="2dp"
                 android:id="@+id/a2"
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:background="#97b4d7"
+                style="@style/CustomButtonView"
                 android:text="a02"
-                android:textSize="3dp" />
+                />
 
             <Button
-                android:layout_margin="2dp"
                 android:id="@+id/a3"
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:background="#97b4d7"
+                style="@style/CustomButtonView"
                 android:text="a03"
-                android:textSize="3dp" />
+                 />
 
             <Button
-                android:layout_margin="2dp"
                 android:id="@+id/a4"
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:background="#97b4d7"
+                style="@style/CustomButtonView"
                 android:text="a04"
-                android:textSize="3dp" />
+                 />
 
             <Button
-                android:layout_margin="2dp"
                 android:id="@+id/a5"
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:background="#97b4d7"
+                style="@style/CustomButtonView"
                 android:text="a05"
-                android:textSize="3dp" />
+                 />
 
             <Button
-                android:layout_margin="2dp"
                 android:id="@+id/a6"
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:background="#97b4d7"
+                style="@style/CustomButtonView"
                 android:text="a06"
-                android:textSize="3dp" />
+                 />
 
             <Button
-                android:layout_margin="2dp"
                 android:id="@+id/a7"
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:background="#97b4d7"
+                style="@style/CustomButtonView"
                 android:text="a07"
-                android:textSize="3dp" />
+                 />
 
             <Button
-                android:layout_margin="2dp"
                 android:id="@+id/a8"
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:background="#97b4d7"
+                style="@style/CustomButtonView"
                 android:text="a08"
-                android:textSize="3dp" />
+                 />
 
             <Button
-                android:layout_margin="2dp"
                 android:id="@+id/a9"
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:background="#97b4d7"
+                style="@style/CustomButtonView"
                 android:text="a09"
-                android:textSize="3dp" />
+                 />
+
+            <Button
+                android:id="@+id/a10"
+                style="@style/CustomButtonView"
+                android:text="a10"
+                 />
+
+            <Button
+                android:id="@+id/a11"
+                style="@style/CustomButtonView"
+                android:text="a11"
+                 />
+
+            <Button
+                android:id="@+id/a12"
+                style="@style/CustomButtonView"
+                android:text="a12"
+                 />
+
+            <Button
+                android:id="@+id/a13"
+                style="@style/CustomButtonView"
+                android:text="a13"
+                 />
+
+            <Button
+                android:id="@+id/a14"
+                style="@style/CustomButtonView"
+                android:text="a14"
+                 />
+
+            <Button
+                android:id="@+id/a15"
+                style="@style/CustomButtonView"
+                android:text="a15"
+                 />
+
+            <Button
+                android:id="@+id/a16"
+                style="@style/CustomButtonView"
+                android:text="a16" />
+
+            <Button
+                android:id="@+id/a17"
+                style="@style/CustomButtonView"
+                android:text="a17"
+                 />
+
+            <Button
+                android:id="@+id/a18"
+                style="@style/CustomButtonView"
+                android:text="a18"
+                />
+
+            <Button
+                android:id="@+id/a19"
+                style="@style/CustomButtonView"
+                android:text="a19"
+                 />
 
 
         </GridLayout>
@@ -120,88 +145,124 @@
             android:layout_margin="40dp"
             android:columnCount="5"
             android:orientation="horizontal"
-            android:rowCount="5"
-            android:useDefaultMargins="true">
+            android:rowCount="5">
 
             <Button
+                style="@style/CustomButtonView"
                 android:id="@+id/b00"
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:background="#97b4d7"
-                android:text="b00"
-                android:textSize="3dp" />
+                android:text="b00" />
 
             <Button
+                style="@style/CustomButtonView"
                 android:id="@+id/b01"
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:background="#97b4d7"
-                android:text="b01"
-                android:textSize="3dp" />
+                android:text="b01" />
 
             <Button
                 android:id="@+id/b2"
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:background="#97b4d7"
+                style="@style/CustomButtonView"
                 android:text="b02"
-                android:textSize="3dp" />
+                />
 
             <Button
                 android:id="@+id/b3"
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:background="#97b4d7"
+                style="@style/CustomButtonView"
                 android:text="b03"
-                android:textSize="3dp" />
+                />
 
             <Button
                 android:id="@+id/b4"
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:background="#97b4d7"
+                style="@style/CustomButtonView"
                 android:text="b04"
-                android:textSize="3dp" />
+                />
 
             <Button
                 android:id="@+id/b5"
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:background="#97b4d7"
+                style="@style/CustomButtonView"
                 android:text="b05"
-                android:textSize="3dp" />
+                />
 
             <Button
                 android:id="@+id/b6"
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:background="#97b4d7"
+                style="@style/CustomButtonView"
                 android:text="b06"
-                android:textSize="3dp" />
+                />
 
             <Button
                 android:id="@+id/b7"
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:background="#97b4d7"
+                style="@style/CustomButtonView"
                 android:text="b07"
-                android:textSize="3dp" />
+                />
 
             <Button
                 android:id="@+id/b8"
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:background="#97b4d7"
+                style="@style/CustomButtonView"
                 android:text="b08"
-                android:textSize="3dp" />
+                />
 
             <Button
                 android:id="@+id/b9"
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:background="#97b4d7"
+                style="@style/CustomButtonView"
                 android:text="b09"
-                android:textSize="3dp" />
+                />
+
+            <Button
+                android:id="@+id/b10"
+                style="@style/CustomButtonView"
+                android:text="b10"
+                />
+
+            <Button
+                android:id="@+id/b11"
+                style="@style/CustomButtonView"
+                android:text="b11"
+                />
+
+            <Button
+                android:id="@+id/b12"
+                style="@style/CustomButtonView"
+                android:text="b12"
+                />
+
+            <Button
+                android:id="@+id/b13"
+                style="@style/CustomButtonView"
+                android:text="b13"
+                />
+
+            <Button
+                android:id="@+id/b14"
+                style="@style/CustomButtonView"
+                android:text="b14"
+                />
+
+            <Button
+                android:id="@+id/b15"
+                style="@style/CustomButtonView"
+                android:text="b15"
+                />
+
+            <Button
+                android:id="@+id/b16"
+                style="@style/CustomButtonView"
+                android:text="b16" />
+
+            <Button
+                android:id="@+id/b17"
+                style="@style/CustomButtonView"
+                android:text="b17"
+                />
+
+            <Button
+                android:id="@+id/b18"
+                style="@style/CustomButtonView"
+                android:text="b18"
+                />
+
+            <Button
+                android:id="@+id/b19"
+                style="@style/CustomButtonView"
+                android:text="b19"
+                />
 
 
         </GridLayout>
