--- a/app/src/main/res/layout/activity_showing_map.xml
+++ b/app/src/main/res/layout/activity_showing_map.xml
@@ -4,7 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     android:orientation="vertical">
+
+    <ImageView
+        android:id="@+id/imgAlbumArt"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/ic_test"
+        android:transitionName="imgAlbumArt" />
 
     <LinearLayout
         android:id="@+id/container"
@@ -12,7 +21,7 @@
         android:layout_height="0dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/tablelayout"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="@id/imgAlbumArt">
 
 
     </LinearLayout>
