--- a/app/src/main/res/layout/fragment_reserveandcheck.xml
+++ b/app/src/main/res/layout/fragment_reserveandcheck.xml
@@ -9,19 +9,12 @@
         android:layout_height="0dp"
         android:layout_weight="1">
 
-        <TextView
-            android:id="@+id/tvTitle"
-            android:text="Fragment #X"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center" />
-
         <ImageView
-            android:src="@drawable/ic_test"
             android:id="@+id/imgAlbum"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#00f0f0"
+            android:src="@drawable/ic_test"
             android:transitionName="imgAlbumArt" />
     </LinearLayout>
 
@@ -34,16 +27,18 @@
         android:columnCount="2">
 
         <LinearLayout
+            android:id="@+id/frag_RAC_SectorA"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:transitionName="imgAlbumArt">
 
             <TextView
-                android:textColor="#000000"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="A Sector"
                 android:textAlignment="center"
+                android:textColor="#000000"
                 android:textSize="14dp"
                 android:textStyle="bold" />
 
@@ -91,16 +86,18 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/frag_RAC_SectorB"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:transitionName="imgAlbumArt">
 
             <TextView
-                android:textColor="#000000"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="B Sector"
                 android:textAlignment="center"
+                android:textColor="#000000"
                 android:textSize="14dp"
                 android:textStyle="bold" />
 
@@ -148,16 +145,18 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/frag_RAC_SectorC"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:transitionName="imgAlbumArt">
 
             <TextView
-                android:textColor="#000000"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="C Sector"
                 android:textAlignment="center"
+                android:textColor="#000000"
                 android:textSize="14dp"
                 android:textStyle="bold" />
 
@@ -205,16 +204,18 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/frag_RAC_SectorD"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:transitionName="imgAlbumArt">
 
             <TextView
-                android:textColor="#000000"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="D Sector"
                 android:textAlignment="center"
+                android:textColor="#000000"
                 android:textSize="14dp"
                 android:textStyle="bold" />
 
