--- a/app/src/main/res/layout/fragment_mystatus_reserving.xml
+++ b/app/src/main/res/layout/fragment_mystatus_reserving.xml
@@ -4,9 +4,14 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
-        android:id="@+id/tvTitle"
+        android:id="@+id/tvTitle2"
         android:text="Fragment #X"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="center" />
+    <Button
+        android:id="@+id/trigger"
+        android:text="Trigger"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </LinearLayout>
