--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,4 +20,9 @@
         android:layout_height="60dip"
         app:layout_constraintBottom_toBottomOf="parent" />
 
+    <Button
+        android:id=""
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 </android.support.constraint.ConstraintLayout>
