--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:id="@+id/container"
     android:background="@drawable/animation_list_bg"
-    tools:context=".LoginActivity">
+    tools:context=".activity.LoginActivity">
 
 
     <!-- Login progress -->
