User class, FirebaseUtil class, User login, Main Activity fixed.

--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -24,14 +24,14 @@
         android:text="logout"/>
 
     <TextView
-        android:id="@+id/email"
+        android:id="@+id/emailAddress"
         android:text="NOTHING"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center" />
 
     <TextView
-        android:id="@+id/seatNum"
+        android:id="@+id/myseatNum"
         android:text="NOTHING"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
