--- a/app/src/main/res/layout/activity_first.xml
+++ b/app/src/main/res/layout/activity_first.xml
@@ -9,7 +9,6 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -19,11 +18,13 @@
         android:id="@+id/logoImage"
         android:layout_width="319dp"
         android:layout_height="49dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:contentDescription="@string/app_name"
+        app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/video_view"
         app:srcCompat="@drawable/logo_image" />
@@ -47,91 +48,34 @@
         android:layout_width="384dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.5749559" />
+        app:layout_constraintGuide_percent="0.62" />
 
-    <Button
-        android:id="@+id/signupButton"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/signup_button_bg"
-        android:text="SIGN UP FREE"
-        android:textColor="@android:color/white"
-        app:layout_constraintLeft_toLeftOf="@+id/v_guideline1"
-        app:layout_constraintRight_toLeftOf="@+id/v_guideline2"
-        app:layout_constraintTop_toTopOf="@+id/h_guideline1" />
-
-    <!--<Button-->
-        <!--android:id="@+id/kakaoLoginButton"-->
-        <!--android:layout_width="0dp"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_marginTop="8dp"-->
-        <!--android:background="@drawable/kakao_button_bg"-->
-        <!--android:text="CONTINUE WITH KAKAOTALK"-->
-        <!--android:textColor="@android:color/black"-->
-        <!--app:layout_constraintLeft_toLeftOf="@+id/v_guideline1"-->
-        <!--app:layout_constraintRight_toLeftOf="@+id/v_guideline2"-->
-        <!--app:layout_constraintTop_toBottomOf="@+id/signupButton" />-->
 
     <com.google.android.gms.common.SignInButton
         android:id="@+id/googleSigninButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="@+id/v_guideline1"
-        app:layout_constraintRight_toLeftOf="@+id/v_guideline2"
-        app:layout_constraintTop_toBottomOf="@+id/signupButton"/>
-
-    <!--<Button-->
-        <!--android:id="@+id/googleSigninButton"-->
-        <!--android:layout_width="0dp"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_marginTop="8dp"-->
-        <!--android:paddingEnd="20dp"-->
-        <!--android:paddingStart="20dp"-->
-        <!--android:text="SIGN IN WITH GOOGLE"-->
-        <!--android:textAllCaps="true"-->
-        <!--android:textColor="#444444"-->
-        <!--android:textSize="14sp"-->
-        <!--android:background="@drawable/google_button_bg"-->
-        <!--app:layout_constraintLeft_toLeftOf="@+id/v_guideline1"-->
-        <!--app:layout_constraintRight_toLeftOf="@+id/v_guideline2"-->
-        <!--app:layout_constraintTop_toBottomOf="@+id/signupButton"/>-->
-
-    <!--<Button-->
-        <!--android:id="@+id/google_login"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:background="@drawable/google_button_bg"-->
-        <!--android:drawableStart="@drawable/google_logo"-->
-        <!--android:paddingEnd="20dp"-->
-        <!--android:paddingStart="20dp"-->
-        <!--android:text="SIGN IN WITH GOOGLE"-->
-        <!--android:textAllCaps="false"-->
-        <!--android:textColor="#FFFFFF"-->
-        <!--android:textSize="14sp"-->
-        <!--android:textStyle="bold" />-->
-
-    <Button
-        android:id="@+id/loginButton"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:background="@drawable/login_button_bg"
-        android:text="LOG IN"
-        android:textColor="@android:color/white"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline2"
+        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintLeft_toLeftOf="@+id/v_guideline1"
         app:layout_constraintRight_toLeftOf="@+id/v_guideline2"
-        app:layout_constraintTop_toBottomOf="@+id/alreadyTextView" />
+        app:layout_constraintTop_toTopOf="@+id/h_guideline1" />
 
-    <TextView
-        android:id="@+id/alreadyTextView"
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Already a user?"
-        android:textColor="@android:color/white"
-        app:layout_constraintLeft_toLeftOf="@+id/v_guideline1"
-        app:layout_constraintRight_toLeftOf="@+id/v_guideline2"
-        app:layout_constraintTop_toBottomOf="@+id/googleSigninButton" />
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="184dp" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="624dp" />
 
 
 </android.support.constraint.ConstraintLayout>
