--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,8 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:id="@+id/container"
-    android:background="@drawable/animation_list_bg"
-    tools:context=".activity.LoginActivity">
+    android:background="@drawable/animation_list_bg">
 
 
     <!-- Login progress -->
@@ -74,7 +73,7 @@
 
 
                 <AutoCompleteTextView
-                    android:id="@+id/email"
+                    android:id="@+id/emailAddress"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:background="@drawable/edittext_box_bg"
