--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -11,8 +11,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:id="@+id/container"
-    android:background="@drawable/animation_list_bg"
-    tools:context=".activity.SignUpActivity">
+    android:background="@drawable/animation_list_bg">
 
 
     <!-- Login progress -->
@@ -63,7 +62,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="What's your email?"
+                android:text="What's your emailAddress?"
                 style="?android:textAppearanceMedium"
                 android:textColor="@android:color/white" />
 
@@ -76,7 +75,7 @@
 
 
                 <AutoCompleteTextView
-                    android:id="@+id/email"
+                    android:id="@+id/emailAddress"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:background="@drawable/edittext_box_bg"
