--- a/app/src/main/res/layout/fragment_mystatus.xml
+++ b/app/src/main/res/layout/fragment_mystatus.xml
@@ -23,19 +23,100 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.362">
 
-        <ImageView
+
+        <Switch
+            android:id="@+id/notify_switch"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Notify me if there is a vacant seat from 2 hours" />
+
+        <TextView
+            android:id="@+id/notify_ts"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|center_horizontal"
-            android:layout_marginTop="50dp"
-            android:src="@drawable/empty_state" />
+            android:text="notify_ts : 0" />
 
         <TextView
+            android:id="@+id/login_ts"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:text="login_ts : 0" />
+
+        <TextView
+            android:id="@+id/start_ts"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:text="start_ts : 0" />
+
+        <TextView
+            android:id="@+id/reserve_ts"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:text="reserve_ts : 0" />
+
+        <TextView
+            android:id="@+id/idle_ts"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:text="idle_ts : 0" />
+
+        <TextView
+            android:id="@+id/penalty_ts"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:text="penalty_ts : 0" />
+
+        <TextView
+            android:id="@+id/block_ts"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:text="block_ts : 0" />
+
+        <TextView
+            android:id="@+id/divider"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|center_horizontal"
             android:layout_marginTop="30dp"
+            android:text="------------------------------------" />
+
+        <TextView
+            android:id="@+id/status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|center_horizontal"
             android:text="@string/empty_state" />
+
+        <TextView
+            android:id="@+id/left_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:text="@string/empty_time" />
+
+        <TextView
+            android:id="@+id/section_num"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:text="@string/empty_section" />
+
+        <TextView
+            android:id="@+id/seat_num"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:text="@string/empty_seat" />
+
+
+
 
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
