--- a/app/src/main/res/layout/fragment_mystatus.xml
+++ b/app/src/main/res/layout/fragment_mystatus.xml
@@ -1,27 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- This is the fragment  to be displayed for a section associated with a tab -->
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <LinearLayout
-
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="55dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/layout_background"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.362">
 
 
         <Switch
@@ -79,13 +60,7 @@
             android:layout_gravity="center_vertical|center_horizontal"
             android:text="block_ts : 0" />
 
-        <TextView
-            android:id="@+id/divider"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|center_horizontal"
-            android:layout_marginTop="30dp"
-            android:text="------------------------------------" />
+
 
         <TextView
             android:id="@+id/status"
@@ -99,7 +74,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|center_horizontal"
-            android:text="@string/empty_time" />
+            android:text="@string/empty_time"
+            android:visibility="visible"/>
 
         <TextView
             android:id="@+id/section_num"
@@ -118,5 +94,4 @@
 
 
 
-    </LinearLayout>
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
