--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -2,134 +2,38 @@
 <!-- This is the fragment  to be displayed for a section associated with a tab -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/container">
+    android:layout_height="match_parent">
 
 
     <Button
-        android:id="@+id/logout_btn"
+        android:id="@+id/btn_logout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Log out" />
 
     <Button
-        android:id="@+id/verify_btn"
+        android:id="@+id/btn_verify_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Send Email Verification" />
 
     <Button
-        android:id="@+id/delete_btn"
+        android:id="@+id/btn_delete_account"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Delete Account" />
 
     <Button
-        android:id="@+id/donate_btn"
+        android:id="@+id/btn_donate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Buy Me a Coffee" />
 
     <Button
-        android:id="@+id/report_btn"
+        android:id="@+id/btn_report"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Contact to a Admin" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <EditText
-            android:id="@+id/section_et"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Section Number"
-            android:layout_weight="0.5"/>
-
-        <EditText
-            android:id="@+id/seat_et"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Seat Number"
-            android:layout_weight="0.5"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/reserve_btn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Reserve"
-            android:layout_weight="0.5"/>
-
-        <Button
-            android:id="@+id/fast_reserve_btn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Fast Reserve"
-            android:layout_weight="0.5"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/start_btn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Start"
-            android:layout_weight="0.5"/>
-
-
-        <Button
-            android:id="@+id/stop_btn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Stop"
-            android:layout_weight="0.5"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/idle_btn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Being Away"
-            android:layout_weight="0.5"/>
-
-
-        <Button
-            android:id="@+id/return_btn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Return to Seat"
-            android:layout_weight="0.5"/>
-    </LinearLayout>
-
-
-
-    <Button
-        android:id="@+id/penalty_btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Get Penalty" />
-
-    <Button
-        android:id="@+id/block_btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Blocked" />
 
 </LinearLayout>
