--- a/app/src/main/res/layout/status_occupy_over.xml
+++ b/app/src/main/res/layout/status_occupy_over.xml
@@ -6,7 +6,7 @@
 
 
     <ProgressBar
-        android:id="@+id/pb_penalty"
+        android:id="@+id/pb_occupy_over"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="200dp"
         android:layout_height="200dp"
@@ -20,13 +20,13 @@
         android:id="@+id/tv_ts"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="You got penalty at ... " />
+        android:text="You started using at ... " />
 
     <TextView
         android:id="@+id/tv_time"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="left time : " />
+        android:text="over time : " />
 
 
 
